# schlimmer-code

./: .replit  aTestFormUsingTkinter.py  anotherFile.py  carCostSimulator.py  europeTrip.py  howManyMilesTillItPaysForItself.py  main.py  pirate_nintendo_roms.py  pyproject.toml  testSimpleGui.py  tripCostCalculator.py  yankeees.py  yes_or_no.py
__pycache__/: index.html
carCostSimulator/: carCostSimulator.py  carCostSimulatorOneCar.py
