[tool.poetry]
name = "repl_python3_CloudyExcitableDrivers"
version = "0.1.0"
description = ""
authors = ["mikkowus <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
PySimpleGUI = "^4.56.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
